--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.servlet.context-path=/foodpanda
+server.servlet.context-path=/
 
 spring.output.ansi.enabled=ALWAYS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
